objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assoc. Dues</fullName>
                </value>
                <value>
                    <fullName>Contract to Deed</fullName>
                </value>
                <value>
                    <fullName>Hybrid Arm [0/1]</fullName>
                </value>
                <value>
                    <fullName>Hzrd Insurance</fullName>
                </value>
                <value>
                    <fullName>Mtg - ARM</fullName>
                </value>
                <value>
                    <fullName>Mtg - Fixed (Default)</fullName>
                </value>
                <value>
                    <fullName>Mtg - Hybrid rate not reset</fullName>
                </value>
                <value>
                    <fullName>Mtg - Hybrid rate reset</fullName>
                </value>
                <value>
                    <fullName>Mtg - Hybrid reset unknown</fullName>
                </value>
                <value>
                    <fullName>Mtg Insurance</fullName>
                </value>
                <value>
                    <fullName>Option Arm [0/1]</fullName>
                </value>
                <value>
                    <fullName>Prop Taxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <label>Program Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PropertyCity__c</fullName>
        <label>Property City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertyState__c</fullName>
        <label>Property State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PropertyZip__c</fullName>
        <label>Property Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RLFInfo__c</fullName>
        <formula>IF(AND(TEXT(FundingType__c) = &apos;NWOs Revolving Loan Fund (including CDBG &amp; Home funded RLF)&apos;,OR(TEXT(FinancingType__c) = &apos;First grant&apos;,TEXT(FinancingType__c) = &apos;All other grants&apos;)),
&apos;Add RLF in combination with Financing Type: Grant. RLF Funding Type typically used with Mortgages or Unsecured loans.&apos;,
&apos;Passed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RLF Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonforRejection__c</fullName>
        <label>Reason for Rejection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TermType__c</fullName>
        <defaultValue>&quot;30 Yr&quot;</defaultValue>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>12 Months</fullName>
                </value>
                <value>
                    <fullName>18 Months</fullName>
                </value>
                <value>
                    <fullName>2 Yr</fullName>
                </value>
                <value>
                    <fullName>3 Yr</fullName>
                </value>
                <value>
                    <fullName>4 Yr</fullName>
                </value>
                <value>
                    <fullName>5 Yr</fullName>
                </value>
                <value>
                    <fullName>6 Yr</fullName>
                </value>
                <value>
                    <fullName>7 Yr</fullName>
                </value>
                <value>
                    <fullName>8 Yr</fullName>
                </value>
                <value>
                    <fullName>9 Yr</fullName>
                </value>
                <value>
                    <fullName>10 Yr</fullName>
                </value>
                <value>
                    <fullName>15 Yr</fullName>
                </value>
                <value>
                    <fullName>2/28</fullName>
                </value>
                <value>
                    <fullName>20 Yr</fullName>
                </value>
                <value>
                    <fullName>30 Yr</fullName>
                </value>
                <value>
                    <fullName>3/27 Yr</fullName>
                </value>
                <value>
                    <fullName>33 Yr</fullName>
                </value>
                <value>
                    <fullName>38 Yr</fullName>
                </value>
                <value>
                    <fullName>40 Yr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalMonthlyPayment__c</fullName>
        <label>Total Monthly Payment (Do Not Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WeatherizationFunds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weatherization Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X203KMortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>203K Mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YourRoleAsMortgageOriginator__c</fullName>
        <label>Your Role As Mortgage Originator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>NWO brokered to a third party to close loan</fullName>
                </value>
                <value>
                    <fullName>NWO funded loan at closing; NWO is mortgage</fullName>
                </value>
                <value>
                    <fullName>NWO funded loan at closing; sold loan to third party investor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YourRoleAsMortgageUnderwriter__c</fullName>
        <label>Your Role As Mortgage Underwriter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>NWO processes loan AND underwrites loan</fullName>
                </value>
                <value>
                    <fullName>NWO processes loan; lender determines underwriting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loan</label>
    <nameField>
        <displayFormat>L- {YYYY}/{MM} - {0000}</displayFormat>
        <label>Loan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan</pluralLabel>
    <recordTypes>
        <fullName>Loan</fullName>
        <active>true</active>
        <label>Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>OutOfPocket</fullName>
        <active>true</active>
        <label>Out of Pocket</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Funding_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(FundingSource__c , &apos;Other not listed above&apos;),ISPICKVAL( FundingType__c, &apos;&apos; ))</errorConditionFormula>
        <errorDisplayField>FundingType__c</errorDisplayField>
        <errorMessage>Complete this field.</errorMessage>
    </validationRules>
</CustomObject>